# autoinvestigator

./: pyproject.toml  requirements.txt  server.py  template.py
client/: demo.py  main.py  mcp_client.py  orchestrator.py  ui.py
client/agents/: company_profiler.py  financial_intel.py  gemini.py  news_watcher.py  pro_risk_analyst.py  risk_radar.py  risk_reporter.py
server/: interface.py  main.py  tool_descriptor.py
server/prompts/: primary_prompts.py
server/tools/: financial_data.py  mail_sender.py  news_aggregator.py  news_scanner.py  sentiment_analyzer.py  web_search.py
shared/: config.py  gemini.py
