[project]
name = "autoinvestigator"
version = "0.1.0"
description = "An Agentic AI based package to autometically inspect company data and do risk assesment"
readme = "README.md"
requires-python = ">=3.10"


[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
